jenkins-server/sg.tf
# Create a security group allowing SSH and HTTP access
resource "aws_security_group" "gymef_jenkins_sg" {
  name        = "jenkins_sg"
  description = "Security group for Jenkins master and nodes"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
